# DetectorSensitivity

./: .gitignore  CMakeLists.txt  CalcCoordinator.cpp  CalcCoordinator.h  ConsolePrint.cpp  ConsolePrint.hpp  Detector.cpp  Detector.h  Doxyfile  Extrap1d.cpp  Extrap1d.h  Functors.h  LICENSE.md  Measurement.cpp  Measurement.h  OutputResult.cpp  OutputResult.hpp  PythonPlot.py  README.md  Response.cpp  Response.h  Simulation.cpp  Simulation.hpp  concurrent_queue.h  example_1.ini  example_2.ini  example_3.ini  example_4.ini  main.cpp
